package ru.bardinpetr.itmo.lab5.server.db.postgres.errors;

public class DBNotFoundException extends Exception {
}
