package ru.bardinpetr.itmo.lab5.server.db.utils;

public interface DBAuthProvider {
    String getUsername();

    String getPassword();
}
